04-applications/04-services/keycloak/09-network-policy.yaml
---
# NetworkPolicy pour sécuriser l'admin
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-admin-policy
  namespace: keycloak
spec:
  podSelector:
    matchLabels:
      app: keycloak
  policyTypes:
    - Ingress
  ingress:
    # Autoriser le trafic public sur le port 8080
    - ports:
        - protocol: TCP
          port: 8081
      from: []
    # Bloquer l'accès externe au port admin 9000
    - ports:
        - protocol: TCP
          port: 9000
      from:
        - namespaceSelector:
            matchLabels:
              name: keycloak
